stylesheet fix parallax overflow
on home, parallax overflow disabled

--- a/app/assets/stylesheets/fixes.scss
+++ b/app/assets/stylesheets/fixes.scss
@@ -156,3 +156,6 @@ textarea.petition-edit-input {
 .petition-editbutton a {
   color: white !important;
 }
+.header-content.home {
+    overflow: hidden;
+}
